--- a/style.css
+++ b/style.css
@@ -137,9 +137,8 @@ nav ul {
 }
 
 #logo-img img {
-  height: 100px;
+  height: 140px;
 }
-
 #logo-img:hover {
   background: white;
 }
@@ -170,6 +169,36 @@ nav ul {
 
 #slideout-menu {
   display: none;
+  background: beige;
+  z-index: 100;
+  position: fixed;
+  transition: 0.4s;
+  margin-top: 72px;
+  width: 100%;
+  text-align: center;
+}
+
+#slideout-menu ul {
+  list-style: none;
+  padding: 0 32px;
+}
+
+#slideout-menu ul li {
+  padding: 8px;
+}
+
+#slideout-menu a {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 20px;
+  color: black;
+}
+
+#slideout-menu input {
+  width: 85%;
+  padding: 8px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 20px;
+  text-align: center;
 }
 
 /* Sections */
@@ -193,4 +222,164 @@ section {
 .section-heading:hover {
   padding: 4px 48px;
   background: red;
+}
+
+/* Section Source */
+
+#section-source p {
+  padding: 8px;
+  text-align: center;
+}
+
+#section-source a {
+  margin: 8px;
+  text-align: center;
+}
+
+/* Card */
+
+.card-image {
+  transition: 0.4s;
+}
+
+.card-image:hover {
+  box-shadow: 0 10px 6px 0.6px #777;
+}
+
+.card .card.description {
+  padding: 0 8px;
+}
+
+/* Read more button */
+
+.btn-readmore {
+  padding: 8px 24px;
+  border: 3px solid black;
+  transition: 0.4s;
+  display: inline-block;
+  margin-bottom: 24px;
+  margin-left: 24px;
+  font-weight: bold;
+  cursor: pointer;
+  background: white;
+}
+
+.btn-readmore:hover {
+  background: red;
+  text-decoration: none;
+  padding: 8px 64px 8px 24px;
+  color: white;
+}
+
+footer {
+  background: black;
+  color: #eee;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+footer #social-media {
+  text-align: center;
+}
+
+footer #social-media a .fa-facebook,
+footer #social-media a .fa-youtube,
+footer #social-media a .fa-github {
+  color: white;
+  transition: 0.4s;
+}
+
+footer #social-media ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+
+footer #social-media ul li {
+  font-size: 48px;
+  padding: 0 20px 0 20px;
+  transition: 0.4s;
+}
+
+footer #social-media ul li:hover a .fa-youtube {
+  color: red;
+}
+
+footer #social-media ul li:hover a .fa-facebook {
+  color: #3b5998;
+}
+
+footer #social-media ul li:hover a .fa-github {
+  color: #bbb;
+}
+
+/* Media queries */
+
+@media (max-width: 600px) {
+  main {
+    width: 100%;
+  }
+  h1 {
+    font-size: 48px;
+  }
+  #banner h3 {
+    font-size: 20px;
+  }
+  .card {
+    text-align: center;
+  }
+  #logo-img {
+    padding: 0;
+  }
+}
+
+@media (max-width: 719px) {
+  main {
+    width: 95%;
+  }
+
+  section {
+    flex-direction: column;
+  }
+
+  .card,
+  .card .card-image img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 900px) {
+  nav ul {
+    display: none;
+  }
+  #menu-icon {
+    display: flex;
+  }
+  #slideout-menu {
+    /* display: block; */
+  }
+  #searchbox {
+    display: none;
+  }
+}
+
+@media (min-width: 720px) {
+  main {
+    width: 95%;
+  }
+  .card {
+    width: 45%;
+  }
+  .card .card-image img {
+    width: 100%;
+    height: 400px;
+  }
+}
+
+@media (min-width: 1200px) {
+  main {
+    width: 85%;
+  }
 }
