--- a/style.css
+++ b/style.css
@@ -252,6 +252,18 @@ section {
   padding: 0 8px;
 }
 
+.card-meta-blogpost {
+  color: #333;
+  font-size: 14px;
+  padding: 16px;
+  font-family: "Roboto Slab", sarif;
+}
+
+.card-meta-blogpost a {
+  color: #333;
+  text-decoration: none;
+}
+
 /* Read more button */
 
 .btn-readmore {
@@ -317,6 +329,93 @@ footer #social-media ul li:hover a .fa-github {
   color: #bbb;
 }
 
+/* Blog list page */
+
+.page-heading {
+  font-size: 32px;
+  font-family: "Roboto Condensed", sans-serif;
+  border-left: 3px solid black;
+  border-right: 3px solid black;
+  transition: all 0.4s;
+  display: inline-block;
+  padding: 4px 32px;
+  margin-top: 120px;
+}
+
+.page-heading:hover {
+  padding: 4px 48px;
+  background-color: red;
+}
+
+.card.meta {
+  color: #333;
+  font-size: 14px;
+  padding-left: 8px;
+  font-family: "Roboto Slab", sarif;
+}
+
+.card-meta a {
+  color: #333;
+}
+
+/* pagination */
+
+.pagination {
+  padding: 8px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.pagination a {
+  border-bottom: 3px solid white;
+  display: inline-block;
+  padding: 8px 16px;
+  transition: 0.4s;
+}
+
+.pagination a:hover {
+  text-decoration: none;
+  border-bottom: 3px solid black;
+}
+
+/* Single Blogpost */
+
+#post-container {
+  display: flex;
+}
+
+#blogpost {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  border-left: 1px solid #999;
+}
+
+#blogpost .card {
+  width: 100%;
+}
+
+#blogpost .card-image:hover {
+  box-shadow: none;
+}
+
+/* Sideabr */
+
+#sidebar {
+  background: #eee;
+  flex: 1;
+  padding: 8px 16px;
+  color: black;
+  box-shadow: inset 27px 0 51px -18px rgba(0, 0, 0, 0.75);
+}
+
+/* Comments Section */
+
+#comments-section {
+  border-top: 3px solid #eee;
+  padding: 8px;
+}
+
 /* Media queries */
 
 @media (max-width: 600px) {
@@ -365,11 +464,20 @@ footer #social-media ul li:hover a .fa-github {
   #searchbox {
     display: none;
   }
+
+  #blogpost {
+    width: 100%;
+    border-left: 0;
+  }
+
+  #sidebar {
+    display: none;
+  }
 }
 
 @media (min-width: 720px) {
   main {
-    width: 95%;
+    width: 75%;
   }
   .card {
     width: 45%;
@@ -381,7 +489,7 @@ footer #social-media ul li:hover a .fa-github {
 }
 
 @media (min-width: 1200px) {
-  main {
+  § main {
     width: 85%;
   }
 }
