--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ textarea:focus {
   pointer-events: none;
   z-index: 50;
   transition: 0.4s;
+  opacity: 0;
 }
 
 #searchbox input {
@@ -94,12 +95,13 @@ nav {
   margin: 0;
   position: fixed;
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 20px;
+  font-size: 22px;
   display: flex;
   justify-content: space-between;
   padding: 0 16px 0 0;
   box-sizing: border-box;
   z-index: 100;
+  transition: all 0.3s;
 }
 
 nav a {
@@ -120,6 +122,14 @@ nav ul {
   align-items: center;
   height: 100%;
   margin: 0;
+}
+
+/* navbar on Scroll */
+
+.nav-scroll {
+  box-shadow: 0px 4px 4px rgb(83, 80, 80);
+  font-size: 18px;
+  height: 60px;
 }
 
 .active {
@@ -484,12 +494,12 @@ footer #social-media ul li:hover a .fa-github {
   }
   .card .card-image img {
     width: 100%;
-    height: 400px;
+    height: 35vh;
   }
 }
 
 @media (min-width: 1200px) {
-  § main {
+  main {
     width: 85%;
   }
 }
