--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ nav {
   margin: 0;
   position: fixed;
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 22px;
+  font-size: 21px;
   display: flex;
   justify-content: space-between;
   padding: 0 16px 0 0;
@@ -107,7 +107,7 @@ nav {
 nav a {
   padding: 0 32px;
   color: black;
-  transition: 0.4s;
+  transition: transform 0.3s;
 }
 
 nav a:hover {
