--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ textarea:focus {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background: rgba(0, 0, 0, 0.2) url("assets/5.jpg");
+  background: rgba(0, 0, 0, 0.2) url("assets/profile.JPG");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -90,7 +90,6 @@ textarea:focus {
 
 nav {
   height: 70px;
-  background: white;
   width: 100%;
   margin: 0;
   position: fixed;
@@ -101,18 +100,26 @@ nav {
   padding: 0 16px 0 0;
   box-sizing: border-box;
   z-index: 100;
-  transition: all 0.3s;
+  transition: all 1s;
 }
 
 nav a {
   padding: 0 32px;
-  color: black;
-  transition: transform 0.3s;
+  color: white;
+  transition: all 1s;
 }
 
 nav a:hover {
   text-decoration: none;
   color: red;
+}
+
+nav li {
+  transition: all 1s;
+}
+
+nav li:hover {
+  transform: scale(1.2);
 }
 
 nav ul {
@@ -128,10 +135,16 @@ nav ul {
 
 .nav-scroll {
   box-shadow: 0px 4px 4px rgb(83, 80, 80);
-  font-size: 18px;
-  height: 60px;
+  background-color: white;
+  height: 85px;
+}
+.nav-scroll a {
+  color: rgb(8, 201, 198);
 }
 
+.nav-scroll #search-icon {
+  color: rgb(8, 201, 198);
+}
 .active {
   color: rgb(129, 67, 67);
 }
@@ -139,18 +152,18 @@ nav ul {
 #logo-img {
   display: flex;
   height: 100%;
-  background: rgb(241, 236, 236);
   padding: 0 32px;
   align-items: center;
-  color: white;
   transition: 0.4s;
+  margin: 10px;
 }
 
 #logo-img img {
-  height: 140px;
+  height: 180px;
+  transition: transform 1s;
 }
-#logo-img:hover {
-  background: white;
+#logo-img img:hover {
+  transform: scale(1.3);
 }
 
 #menu-icon {
@@ -165,7 +178,7 @@ nav ul {
 /* search icon */
 
 #search-icon {
-  color: black;
+  color: white;
   padding: 0 32px;
   cursor: pointer;
   transition: 0.4s;
@@ -224,16 +237,18 @@ section {
 .section-heading {
   font-size: 32px;
   font-family: "Roboto Condensed", sans-serif;
-  border-left: 3px solid black;
-  border-right: 3px solid black;
+  border-left: 3px solid rgb(8, 201, 198);
+  border-right: 3px solid rgb(8, 201, 198);
   transition: all 0.4s;
   display: inline-block;
   padding: 4px 32px;
+  color: rgb(8, 201, 198);
 }
 
 .section-heading:hover {
-  padding: 4px 48px;
-  background: red;
+  transform: scale(1.2);
+  background: rgb(8, 201, 198);
+  color: white;
 }
 
 /* Section Source */
