--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
+}
+
+.blogslist-background {
+  background-color: #ccffee;
 }
 
 h1 {
   padding: 8px;
-  background: rgba(255, 0, 0, 0.8);
   border-radius: 8px;
   margin: 0;
   font-size: 64px;
-  font-family: "Roboto Slab";
+  font-family: "Montserrat", sans-serif;
 }
 
 p {
@@ -34,7 +37,7 @@ input,
 textPath {
   height: 32px;
   padding: 0 16px;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 20px;
   border: none;
   box-shadow: inset 8px 3px 18px -4px rgba(0, 0, 0, 0.2);
@@ -52,20 +55,62 @@ textarea:focus {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   flex-direction: column;
-  background: rgba(0, 0, 0, 0.2) url("assets/profile.JPG");
+  background: rgba(0, 0, 0, 0.4) url("assets/profile.JPG");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
   background-blend-mode: overlay;
   color: white;
+  transition: all 1s;
 }
 
-#banner h3 {
-  background: rgb(2, 95, 95);
-  border-radius: 8px;
-  padding: 0 24px;
-  font-size: 25px;
+#banner h4 {
+  transition: 1.5s;
+  font-size: 5vw;
+  margin: 0;
+}
+
+#banner p {
+  font-size: 1.8vw;
+  transition: 1.5s;
+  margin: 40px 190px 66px 190px;
+}
+
+#banner span {
+  color: rgb(8, 201, 198);
+}
+
+.btn-projects {
+  padding: 14px 28px;
+  border: 2px solid rgb(8, 201, 198);
+  border-radius: 6px;
+  transition: 1.5s;
+  display: inline-block;
+  font-size: 1.5vw;
+  cursor: pointer;
+  color: rgb(8, 201, 198);
+}
+
+.btn-projects:hover {
+  background: rgb(8, 201, 198);
+  text-decoration: none;
+  color: white;
+}
+
+.banner-scroll-header h4 {
+  opacity: 0;
+  transform: translate(-150px);
+}
+
+.banner-scroll-text p {
+  opacity: 0;
+  transform: translate(150px);
+}
+
+.banner-scroll-btn .btn-projects {
+  opacity: 0;
 }
 
 /* Search B0x*/
@@ -93,8 +138,8 @@ nav {
   width: 100%;
   margin: 0;
   position: fixed;
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 21px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
   display: flex;
   justify-content: space-between;
   padding: 0 16px 0 0;
@@ -105,21 +150,19 @@ nav {
 
 nav a {
   padding: 0 32px;
-  color: white;
+  color: aliceblue;
   transition: all 1s;
 }
 
-nav a:hover {
+nav a:hover,
+nav a:active,
+nav a.active {
   text-decoration: none;
-  color: red;
+  color: rgb(8, 201, 198);
 }
 
 nav li {
   transition: all 1s;
-}
-
-nav li:hover {
-  transform: scale(1.2);
 }
 
 nav ul {
@@ -136,17 +179,14 @@ nav ul {
 .nav-scroll {
   box-shadow: 0px 4px 4px rgb(83, 80, 80);
   background-color: white;
-  height: 85px;
+  height: 60px;
 }
 .nav-scroll a {
-  color: rgb(8, 201, 198);
+  color: black;
 }
 
 .nav-scroll #search-icon {
-  color: rgb(8, 201, 198);
-}
-.active {
-  color: rgb(129, 67, 67);
+  color: black;
 }
 
 #logo-img {
@@ -159,11 +199,11 @@ nav ul {
 }
 
 #logo-img img {
-  height: 180px;
+  height: 130px;
   transition: transform 1s;
 }
 #logo-img img:hover {
-  transform: scale(1.3);
+  transform: rotateX(180deg);
 }
 
 #menu-icon {
@@ -213,7 +253,7 @@ nav ul {
 }
 
 #slideout-menu a {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 20px;
   color: black;
 }
@@ -221,7 +261,7 @@ nav ul {
 #slideout-menu input {
   width: 85%;
   padding: 8px;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 20px;
   text-align: center;
 }
@@ -232,16 +272,18 @@ section {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  padding-bottom: 60px;
 }
 
 .section-heading {
   font-size: 32px;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Montserrat", sans-serif;
   border-left: 3px solid rgb(8, 201, 198);
   border-right: 3px solid rgb(8, 201, 198);
   transition: all 0.4s;
   display: inline-block;
   padding: 4px 32px;
+  margin: 120px 0 100px;
   color: rgb(8, 201, 198);
 }
 
@@ -261,6 +303,10 @@ section {
 #section-source a {
   margin: 8px;
   text-align: center;
+}
+
+.project-section {
+  background: rgb(242, 242, 242);
 }
 
 /* Card */
@@ -293,20 +339,20 @@ section {
 
 .btn-readmore {
   padding: 8px 24px;
-  border: 3px solid black;
+  border: 2px solid rgb(8, 201, 198);
+  border-radius: 6px;
   transition: 0.4s;
   display: inline-block;
   margin-bottom: 24px;
   margin-left: 24px;
-  font-weight: bold;
   cursor: pointer;
-  background: white;
+  color: rgb(8, 201, 198);
 }
 
 .btn-readmore:hover {
-  background: red;
+  background: rgb(8, 201, 198);
   text-decoration: none;
-  padding: 8px 64px 8px 24px;
+  transform: scale(1.2);
   color: white;
 }
 
@@ -317,6 +363,7 @@ footer {
   text-align: center;
   justify-content: center;
   flex-direction: column;
+  margin-top: 70px;
 }
 
 footer #social-media {
@@ -358,7 +405,7 @@ footer #social-media ul li:hover a .fa-github {
 
 .page-heading {
   font-size: 32px;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Montserrat", sans-serif;
   border-left: 3px solid black;
   border-right: 3px solid black;
   transition: all 0.4s;
@@ -376,7 +423,7 @@ footer #social-media ul li:hover a .fa-github {
   color: #333;
   font-size: 14px;
   padding-left: 8px;
-  font-family: "Roboto Slab", sarif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .card-meta a {
